Add OCCT version check

--- a/XTouchClient/CMakeLists.txt
+++ b/XTouchClient/CMakeLists.txt
@@ -29,9 +29,14 @@ find_package (OpenCASCADE REQUIRED)
 if (NOT OpenCASCADE_FOUND)
   message (FATAL_ERROR "coult not find OpenCASCADE, please set OpenCASCADE_DIR variable" )
 else()
-  message (STATUS "Using OpenCASCADE from \"${OpenCASCADE_INSTALL_PREFIX}\"" )
-  message (STATUS "OpenCASCADE_INCLUDE_DIR=${OpenCASCADE_INCLUDE_DIR}")
-  message (STATUS "OpenCASCADE_LIBRARY_DIR=${OpenCASCADE_LIBRARY_DIR}")
+  if(OpenCASCADE_VERSION VERSION_LESS_EQUAL "7.8.0")
+    message (STATUS "The version of OpenCASCADE is ${OpenCASCADE_VERSION}")
+    message (STATUS "Using OpenCASCADE from \"${OpenCASCADE_INSTALL_PREFIX}\"" )
+    message (STATUS "OpenCASCADE_INCLUDE_DIR=${OpenCASCADE_INCLUDE_DIR}")
+    message (STATUS "OpenCASCADE_LIBRARY_DIR=${OpenCASCADE_LIBRARY_DIR}")
+  else()
+    message (FATAL_ERROR "The version of OCCT > 7.8.0")
+  endif()
 endif()
                        
 foreach(FLAG ${LIBMYSQLCLIENT_CFLAGS_OTHER})
