--- a/XTouchClient/CMakeLists.txt
+++ b/XTouchClient/CMakeLists.txt
@@ -60,6 +60,9 @@ set(SOURCES
                               
 add_executable(${APP_TARGET} ${SOURCES})
 
+install(TARGETS ${APP_TARGET}
+        DESTINATION bin)
+
 target_link_libraries(${APP_TARGET} PRIVATE stdc++fs)
 
 target_include_directories(${APP_TARGET} PRIVATE ${CLIENT_DIR})
